--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
     "firebase-tools": "^8.6.0",
+    "marked": "^1.1.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.5",
